--- a/Portofolio/style.css
+++ b/Portofolio/style.css
@@ -163,11 +163,18 @@ nav {
 
 .right-skill {
   width: 500px;
-  text-align: start;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .hero-skill {
   padding-top: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  flex-wrap: wrap;
 }
 
 .hero-skill span {
