--- a/Portofolio/style.css
+++ b/Portofolio/style.css
@@ -48,6 +48,20 @@
   color: var(--primaryBackground);
 }
 
+.head-hover span {
+  transition: all 1s;
+  font-family: var(--headFont);
+  color: black;
+  font-weight: 500;
+}
+
+.head-hover:hover span {
+  color: #f8f7f4;
+  background-color: #161a30;
+  border-radius: 20px;
+  padding: 0px 200px;
+}
+
 .head-1 span {
   background-color: var(--primaryBackground);
   font-family: var(--headFont);
